Spacing fixes

--- a/src/Main/style.scss
+++ b/src/Main/style.scss
@@ -112,8 +112,12 @@ $transition2: all 220ms cubic-bezier(0.250,0.100,0.250,1.000) 0ms;
         text-align: center;
 
         .logo-sec-1 {
-            padding: 60px 0 40px;
+            padding: 60px 0 35px;
             position: relative;
+            
+            @media (max-width: 768px) {
+                padding: 45px 0 35px;
+            }
 
             .lilbee {
                 height: 238px;
@@ -125,15 +129,15 @@ $transition2: all 220ms cubic-bezier(0.250,0.100,0.250,1.000) 0ms;
         .album-title {
             font-family: Futura;
             position: relative;
-            padding: 40px 0;
+            padding: 20px 0;
 
             h1 {
-                margin: 40px 0;
+                //margin: 40px 0;
             }
         }
 
         .player {
-            padding: 100px 0 0;
+            padding: 65px 0 0;
             position: relative;
 
             .player-mobile {
@@ -154,9 +158,13 @@ $transition2: all 220ms cubic-bezier(0.250,0.100,0.250,1.000) 0ms;
             height: auto;
             display: inline-block;
             top: 130px;
-            padding: 35px 0;
+            padding: 15px;
             text-align: center;
             font-family: Futura;
+
+            @media (max-width: 768px) {
+                top: 80px;
+            }
 
             .song-link {
                 width: 400px;
@@ -199,9 +207,10 @@ $transition2: all 220ms cubic-bezier(0.250,0.100,0.250,1.000) 0ms;
         .rule-1 {
             position: relative;
             width: 300px;
-            top: 175px;
+            top: 185px;
 
             @media (max-width: 768px) {
+                top: 135px;
                 width: 200px;
             }
         }
@@ -209,17 +218,22 @@ $transition2: all 220ms cubic-bezier(0.250,0.100,0.250,1.000) 0ms;
         .rule-2 {
             position: relative;
             width: 300px;
-            top: 75px;
+            top: 130px;
 
             @media (max-width: 768px) {
+                top: 90px;
                 width: 200px;
             }
         }
 
         .contact {
-            top: 100px;
-            padding: 90px 0;
+            top: 130px;
+            padding: 50px 0;
             position: relative;
+
+            @media (max-width: 768px) {
+                top: 95px;
+            }
 
             p {
                 font-weight: 300;
@@ -241,19 +255,15 @@ $transition2: all 220ms cubic-bezier(0.250,0.100,0.250,1.000) 0ms;
             }
         }
 
-        .footer-logo {
+        .bottom-bee {
             position: relative;
-            padding: 120px 0 50px 0;
+            padding: 120px 0 70px 0;
             top: 60px;
+            height: 200px;
 
-            .bottom-bee {
-                top: 20px;
-                margin: 0;
-                height: 200px;
-
-                @media (max-width: 400px) {
-                    height: 168px;
-                }
+            @media (max-width: 400px) {
+                height: 168px;
+                top: 40px;
             }
         }
 
